--- a/Fire/ConsoleApp/ConsoleApp.vcxproj.filters
+++ b/Fire/ConsoleApp/ConsoleApp.vcxproj.filters
@@ -17,5 +17,8 @@
     <ClCompile Include="Serialize.cpp">
       <Filter>App</Filter>
     </ClCompile>
+    <ClCompile Include="re.cpp">
+      <Filter>App</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
