--- a/Fire/ConsoleApp/ConsoleApp.vcxproj.filters
+++ b/Fire/ConsoleApp/ConsoleApp.vcxproj.filters
@@ -17,7 +17,7 @@
     <ClCompile Include="Serialize.cpp">
       <Filter>App</Filter>
     </ClCompile>
-    <ClCompile Include="re.cpp">
+    <ClCompile Include="tupleReflect.cpp">
       <Filter>App</Filter>
     </ClCompile>
   </ItemGroup>
