--- a/Fire/Reflection/Reflection.vcxproj
+++ b/Fire/Reflection/Reflection.vcxproj
@@ -19,11 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ITypeResolver.h" />
     <ClInclude Include="Macro.h" />
     <ClInclude Include="ReflectionHeader.h" />
     <ClInclude Include="StirngHelper.h" />
     <ClInclude Include="TypeCheck.h" />
-    <ClInclude Include="TypeDescriptor.h" />
+    <ClInclude Include="ITypeDescriptor.h" />
     <ClInclude Include="TypeDescriptor_Primitive.h" />
     <ClInclude Include="TypeDescriptor_StdString.h" />
     <ClInclude Include="TypeDescriptor_StdVector.h" />
@@ -33,8 +34,9 @@
     <ClInclude Include="TypeResolver_StdVector.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ITypeResolver.cpp" />
     <ClCompile Include="StirngHelper.cpp" />
-    <ClCompile Include="TypeDescriptor.cpp" />
+    <ClCompile Include="ITypeDescriptor.cpp" />
     <ClCompile Include="TypeDescriptor_StdString.cpp" />
     <ClCompile Include="TypeDescriptor_StdVector.cpp" />
     <ClCompile Include="TypeDescriptor_Struct.cpp" />
