매크로 정리

--- a/Fire/ConsoleApp/ConsoleApp.vcxproj
+++ b/Fire/ConsoleApp/ConsoleApp.vcxproj
@@ -140,6 +140,9 @@
       <Project>{bcdfd2a2-f65f-4180-851a-4dc80def36ec}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="compoent.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
