--- a/Fire/Reflection/Reflection.vcxproj.filters
+++ b/Fire/Reflection/Reflection.vcxproj.filters
@@ -33,7 +33,7 @@
     <Filter Include="Source\03.Helper">
       <UniqueIdentifier>{22e269d9-9f16-44bf-8e69-d9a1921ba4aa}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header\02.TypeResolver\03.Helper">
+    <Filter Include="Header\03.Helper">
       <UniqueIdentifier>{e9c54420-b2cc-45bb-b505-064327ab8026}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -51,7 +51,7 @@
       <Filter>Header\00.Define</Filter>
     </ClInclude>
     <ClInclude Include="TypeCheck.h">
-      <Filter>Header\02.TypeResolver\03.Helper</Filter>
+      <Filter>Header\03.Helper</Filter>
     </ClInclude>
     <ClInclude Include="TypeDescriptor_Primitive.h">
       <Filter>Header\01.TypeDescriptor</Filter>
@@ -72,13 +72,16 @@
       <Filter>Header\01.TypeDescriptor</Filter>
     </ClInclude>
     <ClInclude Include="StirngHelper.h">
-      <Filter>Header\02.TypeResolver\03.Helper</Filter>
+      <Filter>Header\03.Helper</Filter>
     </ClInclude>
     <ClInclude Include="ITypeResolver.h">
       <Filter>Header\02.TypeResolver</Filter>
     </ClInclude>
     <ClInclude Include="ReflectCheck.h">
-      <Filter>Header\02.TypeResolver\03.Helper</Filter>
+      <Filter>Header\03.Helper</Filter>
+    </ClInclude>
+    <ClInclude Include="TypeDescriptor_EnumClass.h">
+      <Filter>Header\01.TypeDescriptor</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -111,6 +114,9 @@
     </ClCompile>
     <ClCompile Include="ReflectCheck.cpp">
       <Filter>Source\03.Helper</Filter>
+    </ClCompile>
+    <ClCompile Include="TypeDescriptor_EnumClass.cpp">
+      <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
