--- a/Fire/FireGameEngine/FireGameEngine.vcxproj
+++ b/Fire/FireGameEngine/FireGameEngine.vcxproj
@@ -155,6 +155,15 @@
     <ClInclude Include="ExportDefine.h" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\EntityComponentSystem\EntityComponentSystem.vcxproj">
+      <Project>{bcdfd2a2-f65f-4180-851a-4dc80def36ec}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\MathModule\MathModule.vcxproj">
+      <Project>{fab56e85-4bc3-4306-b2c0-3ac78ca3cd29}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Reflection\Reflection.vcxproj">
+      <Project>{e1f64b0d-e717-4dd0-8983-62501afd8ade}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\RendererModule\RendererModule.vcxproj">
       <Project>{1b0ec04e-919c-404a-9a79-96dde98488f3}</Project>
     </ProjectReference>
