--- a/Fire/FireGameEngine/FireGameEngine.vcxproj.filters
+++ b/Fire/FireGameEngine/FireGameEngine.vcxproj.filters
@@ -15,6 +15,9 @@
       <Filter>Header</Filter>
     </ClInclude>
     <ClInclude Include="ExportDefine.h" />
+    <ClInclude Include="FireGameEnginepch.h">
+      <Filter>Header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
