--- a/Fire/GameApplication/imgui.ini
+++ b/Fire/GameApplication/imgui.ini
@@ -13,31 +13,30 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Component]
-ViewportPos=1977,180
+ViewportPos=1971,186
 ViewportId=0xA4D966FE
-Pos=0,473
-Size=640,542
+Pos=0,435
+Size=292,498
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][System]
-ViewportPos=1977,180
-ViewportId=0xA4D966FE
-Size=640,471
+ViewportPos=949,813
+ViewportId=0xCEE114BD
+Size=1022,296
 Collapsed=0
-DockId=0x00000004,1
 
 [Window][Entity]
-ViewportPos=1977,180
+ViewportPos=1971,186
 ViewportId=0xA4D966FE
-Size=640,471
+Size=292,433
 Collapsed=0
 DockId=0x00000004,0
 
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=1977,180 Size=640,1015 Split=Y Selected=0x31E779E6
+DockNode      ID=0x00000001 Pos=1971,186 Size=292,933 Split=Y Selected=0x31E779E6
   DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=742,553 Split=Y Selected=0x31E779E6
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=742,537 Selected=0xF57F7DD5
-    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=742,617 Selected=0x31E779E6
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=742,433 Selected=0xF57F7DD5
+    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=742,498 Selected=0x31E779E6
   DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=742,557 Selected=0xA628E342
 
