--- a/Fire/GameApplication/imgui.ini
+++ b/Fire/GameApplication/imgui.ini
@@ -13,30 +13,102 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Component]
-ViewportPos=1971,186
-ViewportId=0xA4D966FE
-Pos=0,435
-Size=292,498
+ViewportPos=1156,103
+ViewportId=0xD4B39271
+Pos=0,481
+Size=654,477
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][System]
-ViewportPos=949,813
+ViewportPos=-30,-18
 ViewportId=0xCEE114BD
-Size=1022,296
+Size=1495,43
 Collapsed=0
 
 [Window][Entity]
-ViewportPos=1971,186
-ViewportId=0xA4D966FE
-Size=292,433
+ViewportPos=1156,103
+ViewportId=0xD4B39271
+Size=654,479
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000001,0
+
+[Window][Dear ImGui Demo]
+ViewportPos=1471,416
+ViewportId=0xE927CF2F
+Size=550,339
+Collapsed=1
+
+[Window][Example: Custom rendering]
+Pos=98,86
+Size=531,414
+Collapsed=0
+
+[Window][Dear ImGui Debug Log]
+Pos=-214,-44
+Size=623,156
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=203,87
+Size=735,358
+Collapsed=0
+
+[Window][Dear ImGui ID Stack Tool]
+Pos=60,60
+Size=354,104
+Collapsed=0
+
+[Window][Example: Console]
+ViewportPos=333,187
+ViewportId=0x46B5E99C
+Size=520,600
+Collapsed=0
+
+[Window][Example: Log]
+Pos=-210,-40
+Size=500,400
+Collapsed=0
+
+[Window][Example: Long text display]
+Pos=-214,-44
+Size=520,600
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=-174,-4
+Size=451,61
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=-174,96
+Size=451,61
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=-174,196
+Size=247,48
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=198,162
+Size=500,440
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=60,60
+Size=607,944
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=60,60
+Size=570,126
+Collapsed=0
 
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=1971,186 Size=292,933 Split=Y Selected=0x31E779E6
-  DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=742,553 Split=Y Selected=0x31E779E6
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=742,433 Selected=0xF57F7DD5
-    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=742,498 Selected=0x31E779E6
-  DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=742,557 Selected=0xA628E342
+DockNode      ID=0x00000004 Pos=1156,103 Size=654,958 Split=Y
+  DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=292,336 Split=Y Selected=0xF57F7DD5
+    DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=550,376 Selected=0xF57F7DD5
+    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=550,374 Selected=0x31E779E6
+  DockNode    ID=0x00000003 Parent=0x00000004 SizeRef=292,340
 
