--- a/Fire/Reflection/Reflection.vcxproj
+++ b/Fire/Reflection/Reflection.vcxproj
@@ -25,7 +25,7 @@
     <ClInclude Include="ReflectionHeader.h" />
     <ClInclude Include="StirngHelper.h" />
     <ClInclude Include="TypeCheck.h" />
-    <ClInclude Include="ITypeDescriptor.h" />
+    <ClInclude Include="TypeDescriptor.h" />
     <ClInclude Include="TypeDescriptor_EnumClass.h" />
     <ClInclude Include="TypeDescriptor_Primitive.h" />
     <ClInclude Include="TypeDescriptor_StdString.h" />
@@ -39,8 +39,9 @@
     <ClCompile Include="ITypeResolver.cpp" />
     <ClCompile Include="ReflectCheck.cpp" />
     <ClCompile Include="StirngHelper.cpp" />
-    <ClCompile Include="ITypeDescriptor.cpp" />
+    <ClCompile Include="TypeDescriptor.cpp" />
     <ClCompile Include="TypeDescriptor_EnumClass.cpp" />
+    <ClCompile Include="TypeDescriptor_Primitive.cpp" />
     <ClCompile Include="TypeDescriptor_StdString.cpp" />
     <ClCompile Include="TypeDescriptor_StdVector.cpp" />
     <ClCompile Include="TypeDescriptor_Struct.cpp" />
