--- a/Fire/EntityComponentSystem/EntityComponentSystem.vcxproj
+++ b/Fire/EntityComponentSystem/EntityComponentSystem.vcxproj
@@ -36,7 +36,9 @@
     <ClInclude Include="ISubscriber.h" />
     <ClInclude Include="Name.h" />
     <ClInclude Include="StringConverter.h" />
+    <ClInclude Include="Transform.h" />
     <ClInclude Include="TypeIndex.h" />
+    <ClInclude Include="Vector3.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
@@ -53,6 +55,8 @@
     <ClCompile Include="ISubscriber.cpp" />
     <ClCompile Include="Name.cpp" />
     <ClCompile Include="StringConverter.cpp" />
+    <ClCompile Include="Transform.cpp" />
+    <ClCompile Include="Vector3.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
