--- a/Fire/GameApplication/imgui.ini
+++ b/Fire/GameApplication/imgui.ini
@@ -13,10 +13,10 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Component]
-ViewportPos=1156,103
+ViewportPos=1169,150
 ViewportId=0xD4B39271
 Pos=0,481
-Size=654,477
+Size=650,477
 Collapsed=0
 DockId=0x00000005,0
 
@@ -27,17 +27,17 @@ Size=1495,43
 Collapsed=0
 
 [Window][Entity]
-ViewportPos=1156,103
+ViewportPos=1169,150
 ViewportId=0xD4B39271
-Size=654,479
+Size=650,479
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1471,416
+ViewportPos=1575,504
 ViewportId=0xE927CF2F
-Size=550,339
-Collapsed=1
+Size=667,635
+Collapsed=0
 
 [Window][Example: Custom rendering]
 Pos=98,86
@@ -45,13 +45,15 @@ Size=531,414
 Collapsed=0
 
 [Window][Dear ImGui Debug Log]
-Pos=-214,-44
+ViewportPos=-103,136
+ViewportId=0x8E350B18
 Size=623,156
 Collapsed=0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=203,87
-Size=735,358
+ViewportPos=314,267
+ViewportId=0x8FC55800
+Size=1159,710
 Collapsed=0
 
 [Window][Dear ImGui ID Stack Tool]
@@ -66,7 +68,8 @@ Size=520,600
 Collapsed=0
 
 [Window][Example: Log]
-Pos=-210,-40
+ViewportPos=139,177
+ViewportId=0xBF126D42
 Size=500,400
 Collapsed=0
 
@@ -102,11 +105,11 @@ Collapsed=0
 
 [Window][About Dear ImGui]
 Pos=60,60
-Size=570,126
+Size=518,276
 Collapsed=0
 
 [Docking][Data]
-DockNode      ID=0x00000004 Pos=1156,103 Size=654,958 Split=Y
+DockNode      ID=0x00000004 Pos=1169,150 Size=650,958 Split=Y
   DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=292,336 Split=Y Selected=0xF57F7DD5
     DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=550,376 Selected=0xF57F7DD5
     DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=550,374 Selected=0x31E779E6
