--- a/Fire/EntityComponentSystem/EntityComponentSystem.vcxproj
+++ b/Fire/EntityComponentSystem/EntityComponentSystem.vcxproj
@@ -35,6 +35,7 @@
     <ClInclude Include="IEntitySystem.h" />
     <ClInclude Include="ISubscriber.h" />
     <ClInclude Include="Name.h" />
+    <ClInclude Include="OBJECT_TYPE.h" />
     <ClInclude Include="StringConverter.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="TypeIndex.h" />
@@ -54,6 +55,7 @@
     <ClCompile Include="IEntitySystem.cpp" />
     <ClCompile Include="ISubscriber.cpp" />
     <ClCompile Include="Name.cpp" />
+    <ClCompile Include="OBJECT_TYPE.cpp" />
     <ClCompile Include="StringConverter.cpp" />
     <ClCompile Include="Transform.cpp" />
     <ClCompile Include="Vector3.cpp" />
