--- a/Fire/GameApplication/imgui.ini
+++ b/Fire/GameApplication/imgui.ini
@@ -13,34 +13,34 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Component]
-ViewportPos=1173,149
+ViewportPos=1318,71
 ViewportId=0xD4B39271
 Pos=0,483
-Size=650,475
+Size=315,475
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][System]
-ViewportPos=-30,-18
+ViewportPos=242,786
 ViewportId=0xCEE114BD
-Size=1495,43
+Size=1077,244
 Collapsed=0
 
 [Window][Entity]
-ViewportPos=1173,149
+ViewportPos=1318,71
 ViewportId=0xD4B39271
-Size=650,481
+Size=315,481
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1383,497
-ViewportId=0xE927CF2F
-Size=667,635
+Pos=568,193
+Size=315,481
 Collapsed=0
 
 [Window][Example: Custom rendering]
-Pos=98,86
+ViewportPos=191,168
+ViewportId=0x3AC84485
 Size=531,414
 Collapsed=0
 
@@ -94,12 +94,13 @@ Size=247,48
 Collapsed=0
 
 [Window][Example: Simple layout]
-Pos=198,162
+Pos=200,162
 Size=500,440
 Collapsed=0
 
 [Window][Example: Documents]
-Pos=60,60
+ViewportPos=154,142
+ViewportId=0x1FD64BEB
 Size=607,944
 Collapsed=0
 
@@ -108,8 +109,26 @@ Pos=60,60
 Size=518,276
 Collapsed=0
 
+[Window][Example: Simple layout/left pane_AED60EF8]
+IsChild=1
+Size=150,376
+
+[Window][Example: Auto-resizing window]
+Pos=60,59
+Size=416,648
+Collapsed=1
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Table][0xD181190E,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
-DockNode      ID=0x00000004 Pos=1173,149 Size=650,958 Split=Y
+DockNode      ID=0x00000004 Pos=1318,71 Size=315,958 Split=Y
   DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=292,336 Split=Y Selected=0xF57F7DD5
     DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=550,481 Selected=0xF57F7DD5
     DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=550,475 Selected=0x31E779E6
